# Shell-Case-Easy-Maker

./: .gitignore  AGENTS.md  ALL_DOCS_COMBINED.md  MANIFEST.json  README.md  ROADMAP.md  TASKS.md  WORKLOG.md  pubspec.yaml
docs/: 00_PROJECT_VISION.md  01_PRODUCT_RULES.md  02_CORE_CONCEPTS.md  03_ARCHITECTURE_OVERVIEW.md  04_GEOMETRY_ENGINE_OCCT.md  05_PROJECT_FILE_FORMAT.md  06_FEATURE_SYSTEM.md  07_COMPONENT_TEMPLATE_SYSTEM.md  08_COMPONENT_EDITOR_UX.md  09_PATTERN_AND_LAYOUT_SYSTEM.md  10_ENCLOSURE_AUTO_GENERATION.md  11_MOUNTING_AND_RETENTION_SYSTEM.md  12_SLOT_AND_BAY_SYSTEM.md  13_PANEL_RECESS_INSERT_GLASS_SYSTEM.md  14_SURFACE_TEXTURE_SYSTEM.md  15_CLEARANCE_AND_FIT_RULES.md  16_BUTTON_AND_PLUNGER_SYSTEM.md  17_SWITCH_MAPPING_SYSTEM.md  18_MARKING_AND_ANNOTATION_SYSTEM.md  19_SHAPE_MODIFIER_SYSTEM.md  20_CASE_AND_ACCESSORY_SYSTEM.md  21_GRID_SNAP_SYMMETRY.md  22_UI_NAVIGATION_LAYOUT.md  23_PARAMETER_KNOBS_INPUT_MAPPING.md  24_CONTEXT_POPOVERS_THEMES.md  25_EXPORT_PIPELINE.md  26_TESTING_AND_QUALITY.md  27_RESEARCH_AND_REFERENCES.md  28_IMPLEMENTATION_PLAN.md  29_CODING_STANDARDS.md  30_ADVANCED_CAD_MODE.md  31_COMMANDS_AND_UNDO.md  32_USABLE_SHELL.md  33_COMPONENT_FEATURE_PROJECTION.md  33_VIEWPORT_MVP.md  34_FIRST_GEOMETRY_SLICE.md  35_OCCT_WINDOWS_DEPENDENCY_PLAN.md  35_PARAMETER_MODEL.md
examples/: component_template_button_board.json  sample_project.enclosure.json
lib/: main.dart
linux/: CMakeLists.txt
occt_worker/: README.md
occt_worker/native/: CMakeLists.txt  vcpkg.json
occt_worker/native/src/: main.cpp  occt_main.cpp
templates/: FEATURE_SPEC_TEMPLATE.md  RESEARCH_NOTE_TEMPLATE.md  WORKLOG_ENTRY_TEMPLATE.md
test/: build_latest_windows_script_test.dart  command_registry_test.dart  component_feature_projection_test.dart  enclosure_parameter_adapter_test.dart  geometry_backend_test.dart  geometry_protocol_fixture_test.dart  geometry_protocol_test.dart  geometry_worker_process_client_test.dart  geometry_worker_runtime_test.dart  geometry_worker_service_test.dart  native_occt_geometry_regression_test.dart  parameter_model_test.dart  (+17 more)
(+60 files in other folders)
